; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_ra_gl.c_gl_debug_marker.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_ra_gl.c_gl_debug_marker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra = type { i32, %struct.ra_gl* }
%struct.ra_gl = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ra*, i8*)* @gl_debug_marker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl_debug_marker(%struct.ra* %0, i8* %1) #0 {
  %3 = alloca %struct.ra*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ra_gl*, align 8
  store %struct.ra* %0, %struct.ra** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.ra*, %struct.ra** %3, align 8
  %7 = getelementptr inbounds %struct.ra, %struct.ra* %6, i32 0, i32 1
  %8 = load %struct.ra_gl*, %struct.ra_gl** %7, align 8
  store %struct.ra_gl* %8, %struct.ra_gl** %5, align 8
  %9 = load %struct.ra_gl*, %struct.ra_gl** %5, align 8
  %10 = getelementptr inbounds %struct.ra_gl, %struct.ra_gl* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %2
  %14 = load %struct.ra_gl*, %struct.ra_gl** %5, align 8
  %15 = getelementptr inbounds %struct.ra_gl, %struct.ra_gl* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.ra*, %struct.ra** %3, align 8
  %18 = getelementptr inbounds %struct.ra, %struct.ra* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @gl_check_error(i32 %16, i32 %19, i8* %20)
  br label %22

22:                                               ; preds = %13, %2
  ret void
}

declare dso_local i32 @gl_check_error(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
